// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagList > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-controls=":r2:"
        aria-describedby=":r2:"
        class="emotion-9 emotion-10"
        tabindex="-1"
      >
        <span
          class="emotion-11 emotion-12"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 100px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-24 {
  display: inherit;
}

.emotion-24[data-container-full-width="true"] {
  width: 100%;
}

.emotion-26 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            very
          </span>
        </span>
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            item
          </span>
        </span>
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            item
          </span>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            item
          </span>
        </span>
      </div>
      <div
        aria-controls=":r23:"
        aria-describedby=":r23:"
        class="emotion-24 emotion-25"
        tabindex="-1"
      >
        <span
          class="emotion-26 emotion-27"
          data-testid="taglist-open"
        >
          +51
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 0px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway is the best cloud provider ever invented
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-controls=":ri:"
        aria-describedby=":ri:"
        class="emotion-9 emotion-10"
        tabindex="-1"
      >
        <span
          class="emotion-11 emotion-12"
          data-testid="taglist-open"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6:hover,
.emotion-6:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-9 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls=":r11:"
          aria-describedby=":r11:"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9 emotion-10"
            >
              scaleway
            </span>
          </button>
        </div>
        <div
          aria-controls=":r13:"
          aria-describedby=":r13:"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="ellipsed emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9 emotion-10"
            >
              cloud
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            cloud
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-14 {
  display: inherit;
}

.emotion-14[data-container-full-width="true"] {
  width: 100%;
}

.emotion-16 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        aria-controls=":re:"
        aria-describedby=":re:"
        class="emotion-14 emotion-15"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-17"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 100px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-controls=":rn:"
        aria-describedby=":rn:"
        class="emotion-9 emotion-10"
        tabindex="-1"
      >
        <span
          class="emotion-11 emotion-12"
          data-testid="taglist-open"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with icons 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6:hover,
.emotion-6:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-9 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls=":r1b:"
          aria-describedby=":r1b:"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9 emotion-10"
            >
              scaleway
            </span>
          </button>
        </div>
        <div
          aria-controls=":r1d:"
          aria-describedby=":r1d:"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="ellipsed emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9 emotion-10"
            >
              cloud
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-14 {
  display: inherit;
}

.emotion-14[data-container-full-width="true"] {
  width: 100%;
}

.emotion-16 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            cloud
          </span>
        </span>
      </div>
      <div
        aria-controls=":rs:"
        aria-describedby=":rs:"
        class="emotion-14 emotion-15"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-17"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`TagList > renders correctly with placement 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-7 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 14.5rem;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <span
            class="emotion-6 emotion-7 emotion-8"
          >
            scaleway
          </span>
        </span>
      </div>
      <div
        aria-controls=":r5:"
        aria-describedby=":r5:"
        class="emotion-9 emotion-10"
        tabindex="-1"
      >
        <span
          class="emotion-11 emotion-12"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
